<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutVictim"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp"
    android:orientation="vertical" 
    tools:context=".VictimActivity" >

    <ImageView
        android:id="@+id/imgSystemStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:contentDescription="System Status icon"
        android:src="@drawable/scanning" />

    <TextView
        android:id="@+id/lblSystemStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="" />

    <TextView
        android:id="@+id/lblSendMessageHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/victim_lblSendMessageHeading"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/txtTextMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:imeOptions="actionDone"
        android:inputType="text"/>

    <TextView
        android:id="@+id/lblSendMessageRecomendations"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/victim_lblSendMessageRecomendations" />

    <Button
        android:id="@+id/btnSendTextMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/victim_btnSendTextMessage" />

    <TextView
        android:id="@+id/lblMessageLogHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/victim_lblMessageLogHeading"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <ListView
        android:id="@+id/lstSentMessages"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:listitem="@layout/listview_victim_messages" >

    </ListView>

</LinearLayout>